--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -48,3 +48,12 @@
     content: "{{ root_prefix_condarc | to_nice_yaml }}"
     mode: "a+r,u+w"
   when: (first_args is defined) and (root_prefix_condarc is defined)
+
+- name: Create /etc/profile.d/99micromamba.sh to enable activate globally
+  lineinfile:
+    path: /etc/profile.d/99micromamba.sh
+    regexp: ^eval
+    line: >
+      eval "$(micromamba shell hook --shell=bash)"
+    state: present
+    create: true
